<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"
        android:padding="12sp"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"
        android:padding="12sp"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/arimo"
        android:text="@string/city"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/ivMenu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/tvCity">

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@drawable/setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:fontFamily="@font/cabin_medium"
            android:maxLines="1"
            android:text="@string/san_francisco"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ivSetting"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/solitude"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/layoutCityName" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        tools:listitem="@layout/row_filter_list" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHouses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/rvFilter"
        tools:itemCount="3"
        android:clipToPadding="false"
        android:paddingBottom="60dp"
        tools:listitem="@layout/row_house_list" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/tangaroa"
        android:drawableLeft="@drawable/ic_map"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/map_view"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>